# Smart_Resume_Screening_System

./: CMakeLists.txt  README.md  run_web.bat  shortlist_report.txt
data/: sample_resumes.txt
include/: models.hpp  screening_system.hpp  trie.hpp
src/: main.cpp  screening_system.cpp  web_server.cpp
web/: app.js  index.html  styles.css
